logs/mavlink_sitl_gazebo/build.make.001.log
[  1%] Built target std_msgs_generate_messages_cpp
[  6%] Built target models_gen
[  7%] Built target sdf
[  7%] Built target sensor_msgs_generate_messages_cpp
[ 11%] Built target std_msgs
[ 13%] Built target klt_feature_tracker
[ 17%] Built target mav_msgs
[ 20%] Built target physics_msgs
[ 23%] Built target nav_msgs
[ 40%] Built target sensor_msgs
[ 40%] Built target sensor_msgs_generate_messages_eus
[ 40%] Built target std_msgs_generate_messages_eus
[ 40%] Built target sensor_msgs_generate_messages_lisp
[ 40%] Built target std_msgs_generate_messages_lisp
[ 40%] Built target std_msgs_generate_messages_py
[ 40%] Built target sensor_msgs_generate_messages_nodejs
[ 40%] Built target sensor_msgs_generate_messages_py
[ 40%] Built target std_msgs_generate_messages_nodejs
[ 40%] Built target _klt_feature_tracker_generate_messages_check_deps_TrackFeatures
[ 42%] Built target gazebo_uuv_plugin
[ 47%] Built target OpticalFlow
[ 48%] Built target gazebo_lidar_plugin
[ 48%] [32mBuilding CXX object CMakeFiles/gazebo_geotagged_images_plugin.dir/src/gazebo_geotagged_images_plugin.cpp.o[0m
[ 50%] Built target gazebo_opticalflow_mockup_plugin
[ 52%] Built target gazebo_imu_plugin
[ 55%] Built target gazebo_controller_interface
[ 57%] Built target gazebo_sonar_plugin
[ 59%] Built target gazebo_gimbal_controller_plugin
[ 61%] Built target gazebo_wind_plugin
[ 64%] Built target gazebo_vision_plugin
[ 65%] Built target gazebo_mavlink_interface
[ 67%] Built target gazebo_motor_model
[ 69%] Built target gazebo_catapult_plugin
[ 70%] Built target gazebo_usv_dynamics_plugin
[ 71%] Built target gazebo_multirotor_base_plugin
[ 75%] Built target gazebo_magnetometer_plugin
[ 76%] [34m[1mGenerating include/moc_gazebo_video_stream_widget.cpp[0m
[35m[1mScanning dependencies of target LiftDragPlugin[0m
[ 77%] Built target gazebo_barometer_plugin
[ 78%] Built target gazebo_gst_camera_plugin
[ 82%] Built target gazebo_irlock_plugin
[ 82%] Built target gazebo_parachute_plugin
[ 83%] Built target klt_feature_tracker_generate_messages_cpp
[ 85%] Built target gazebo_gps_plugin
[35m[1mScanning dependencies of target gazebo_opticalflow_plugin[0m
[ 86%] Built target klt_feature_tracker_generate_messages_eus
[ 87%] Built target klt_feature_tracker_generate_messages_lisp
[ 88%] Built target klt_feature_tracker_generate_messages_nodejs
[ 91%] Built target klt_feature_tracker_generate_messages_py
[ 91%] Built target klt_feature_tracker_generate_messages
[ 93%] Built target feature_tracker_node
[ 94%] [32mBuilding CXX object CMakeFiles/gazebo_opticalflow_plugin.dir/src/gazebo_opticalflow_plugin.cpp.o[0m
[ 94%] [32mBuilding CXX object CMakeFiles/LiftDragPlugin.dir/src/liftdrag_plugin/liftdrag_plugin.cpp.o[0m
[35m[1mScanning dependencies of target gazebo_video_stream_widget[0m
[ 95%] [32mBuilding CXX object CMakeFiles/gazebo_video_stream_widget.dir/include/moc_gazebo_video_stream_widget.cpp.o[0m
[ 95%] [32mBuilding CXX object CMakeFiles/gazebo_video_stream_widget.dir/src/gazebo_video_stream_widget.cpp.o[0m
[ 96%] [32m[1mLinking CXX shared library /home/pcampolucci/autonomy/devel/.private/mavlink_sitl_gazebo/lib/libgazebo_video_stream_widget.so[0m
[ 96%] Built target gazebo_video_stream_widget
[ 97%] [32m[1mLinking CXX shared library /home/pcampolucci/autonomy/devel/.private/mavlink_sitl_gazebo/lib/libLiftDragPlugin.so[0m
[ 97%] Built target LiftDragPlugin
/home/pcampolucci/autonomy/src/state_estimation/sitl_gazebo/src/gazebo_geotagged_images_plugin.cpp: In member function ‘void gazebo::GeotaggedImagesPlugin::_send_capture_status(sockaddr*)’:
/home/pcampolucci/autonomy/src/state_estimation/sitl_gazebo/src/gazebo_geotagged_images_plugin.cpp:739:22: error: too many arguments to function ‘uint16_t mavlink_msg_camera_capture_status_pack_chan(uint8_t, uint8_t, uint8_t, mavlink_message_t*, uint32_t, uint8_t, uint8_t, float, uint32_t, float)’
         _imageCounter);                         // total number of images
                      ^
In file included from /opt/ros/melodic/include/mavlink/v2.0/common/common.h:2314:0,
                 from /opt/ros/melodic/include/mavlink/v2.0/common/mavlink.h:32,
                 from /home/pcampolucci/autonomy/src/state_estimation/sitl_gazebo/include/gazebo_geotagged_images_plugin.h:21,
                 from /home/pcampolucci/autonomy/src/state_estimation/sitl_gazebo/src/gazebo_geotagged_images_plugin.cpp:18:
/opt/ros/melodic/include/mavlink/v2.0/common/./mavlink_msg_camera_capture_status.h:110:24: note: declared here
 static inline uint16_t mavlink_msg_camera_capture_status_pack_chan(uint8_t system_id, uint8_t component_id, uint8_t chan,
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-address-of-packed-member’
CMakeFiles/gazebo_geotagged_images_plugin.dir/build.make:62: recipe for target 'CMakeFiles/gazebo_geotagged_images_plugin.dir/src/gazebo_geotagged_images_plugin.cpp.o' failed
make[2]: *** [CMakeFiles/gazebo_geotagged_images_plugin.dir/src/gazebo_geotagged_images_plugin.cpp.o] Error 1
CMakeFiles/Makefile2:153: recipe for target 'CMakeFiles/gazebo_geotagged_images_plugin.dir/all' failed
make[1]: *** [CMakeFiles/gazebo_geotagged_images_plugin.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 98%] [32m[1mLinking CXX shared library /home/pcampolucci/autonomy/devel/.private/mavlink_sitl_gazebo/lib/libgazebo_opticalflow_plugin.so[0m
[ 98%] Built target gazebo_opticalflow_plugin
Makefile:162: recipe for target 'all' failed
make: *** [all] Error 2
